--- a/packages/dx-site/src/components/landing/product-layout.module.scss
+++ b/packages/dx-site/src/components/landing/product-layout.module.scss
@@ -6,3 +6,9 @@
 .footer {
   margin-bottom: 60px;
 }
+
+@media screen and (max-width: 800px) {
+  .header {
+    margin-top: -180px;
+  }
+}
